@@ -1,4 +1,6 @@
 ver 0.18.8 (not yet released)
+* decoder
+  - ffmpeg: support libav v10_alpha1
 
 ver 0.18.7 (2013/01/13)
 * playlist
